Fix idaholab/Malcolm#178, docker-compose move from go-yaml/v3 breaks Malcolm's docker-compose YAML files

--- a/docker-compose-standalone.yml
+++ b/docker-compose-standalone.yml
@@ -367,9 +367,7 @@ services:
     networks:
       - default
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *opensearch-variables
+      <<: [*opensearch-variables, *ssl-variables, *process-variables]
       logger.level : 'WARN'
       bootstrap.memory_lock : 'true'
       MAX_LOCKED_MEMORY : 'unlimited'
@@ -408,10 +406,7 @@ services:
     networks:
       - default
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *opensearch-variables
-      << : *dashboards-helper-variables
+      <<: [*dashboards-helper-variables, *opensearch-variables, *ssl-variables, *process-variables]
       DASHBOARDS_URL : 'http://dashboards:5601/dashboards'
       VIRTUAL_HOST : 'dashboards-helper.malcolm.local'
       ARKIME_INDEX_PATTERN : 'arkime_sessions3-*'
@@ -439,9 +434,7 @@ services:
     networks:
       - default
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *opensearch-variables
+      <<: [*opensearch-variables, *ssl-variables, *process-variables]
       VIRTUAL_HOST : 'dashboards.malcolm.local'
     depends_on:
       - opensearch
@@ -471,13 +464,7 @@ services:
       - IPC_LOCK
     env_file: ./netbox/env/netbox.env
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *opensearch-variables
-      << : *netbox-variables
-      << : *logstash-variables
-      << : *common-beats-variables
-      << : *common-lookup-variables
+      <<: [*common-lookup-variables, *common-beats-variables, *logstash-variables, *netbox-variables, *opensearch-variables, *ssl-variables, *process-variables]
       LS_JAVA_OPTS : '-server -Xms2g -Xmx2g -Xss1536k -XX:-HeapDumpOnOutOfMemoryError -Djava.security.egd=file:/dev/./urandom -Dlog4j.formatMsgNoLookups=true'
     depends_on:
       - opensearch
@@ -507,13 +494,7 @@ services:
     networks:
       - default
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *nginx-variables
-      << : *opensearch-variables
-      << : *filebeat-variables
-      << : *common-upload-variables
-      << : *common-beats-variables
+      <<: [*common-beats-variables, *common-upload-variables, *filebeat-variables, *opensearch-variables, *nginx-variables, *ssl-variables, *process-variables]
       FILEBEAT_ZEEK_LOG_PATH : '/zeek/current'
       FILEBEAT_ZEEK_LOG_LIVE_PATH : '/zeek/live'
       FILEBEAT_SURICATA_LOG_PATH : '/suricata'
@@ -548,11 +529,7 @@ services:
     env_file:
       - ./auth.env
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *opensearch-variables
-      << : *common-upload-variables
-      << : *arkime-variables
+      <<: [*arkime-variables, *common-upload-variables, *opensearch-variables, *ssl-variables, *process-variables]
       VIRTUAL_HOST : 'arkime.malcolm.local'
       OPENSEARCH_MAX_SHARDS_PER_NODE : 2500
       VIEWER : 'on'
@@ -593,11 +570,7 @@ services:
       - NET_RAW
       - SYS_ADMIN
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *common-upload-variables
-      << : *zeek-variables
-      << : *zeek-offline-variables
+      <<: [*zeek-offline-variables, *zeek-variables, *common-upload-variables, *ssl-variables, *process-variables]
       ZEEK_PCAP_PROCESSOR : 'true'
       ZEEK_CRON : 'false'
     depends_on:
@@ -630,12 +603,7 @@ services:
       - NET_RAW
       - SYS_ADMIN
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *common-upload-variables
-      << : *zeek-variables
-      << : *zeek-live-variables
-      << : *pcap-capture-variables
+      <<: [*pcap-capture-variables, *zeek-live-variables, *zeek-variables, *common-upload-variables, *ssl-variables, *process-variables]
       ZEEK_PCAP_PROCESSOR : 'false'
       ZEEK_CRON : 'true'
       ZEEK_LOG_PATH : '/zeek/live'
@@ -664,11 +632,7 @@ services:
       - NET_RAW
       - SYS_ADMIN
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *common-upload-variables
-      << : *suricata-variables
-      << : *suricata-offline-variables
+      <<: [*suricata-offline-variables, *suricata-variables, *common-upload-variables, *ssl-variables, *process-variables]
       SURICATA_PCAP_PROCESSOR : 'true'
     depends_on:
       - logstash
@@ -699,12 +663,7 @@ services:
       - NET_RAW
       - SYS_ADMIN
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *common-upload-variables
-      << : *suricata-variables
-      << : *suricata-live-variables
-      << : *pcap-capture-variables
+      <<: [*pcap-capture-variables, *suricata-live-variables, *suricata-variables, *common-upload-variables, *ssl-variables, *process-variables]
       SURICATA_PCAP_PROCESSOR : 'false'
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
@@ -719,9 +678,7 @@ services:
     networks:
       - default
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *zeek-variables
+      <<: [*zeek-variables, *ssl-variables, *process-variables]
       VIRTUAL_HOST : 'file-monitor.malcolm.local'
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
@@ -750,9 +707,7 @@ services:
       - NET_RAW
       - SYS_ADMIN
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *pcap-capture-variables
+      <<: [*pcap-capture-variables, *ssl-variables, *process-variables]
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
       - ./pcap/upload:/pcap
@@ -765,10 +720,7 @@ services:
     networks:
       - default
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *opensearch-variables
-      << : *common-upload-variables
+      <<: [*common-upload-variables, *opensearch-variables, *ssl-variables, *process-variables]
     depends_on:
       - opensearch
     volumes:
@@ -793,8 +745,7 @@ services:
     env_file:
       - ./auth.env
     environment:
-      << : *process-variables
-      << : *ssl-variables
+      <<: [*ssl-variables, *process-variables]
       SITE_NAME : 'Capture File and Log Archive Upload'
       VIRTUAL_HOST : 'upload.malcolm.local'
     depends_on:
@@ -819,9 +770,7 @@ services:
     networks:
       - default
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *auth-variables
+      <<: [*auth-variables, *ssl-variables, *process-variables]
       VIRTUAL_HOST : 'htadmin.malcolm.local'
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
@@ -843,9 +792,7 @@ services:
     networks:
       - default
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *common-lookup-variables
+      <<: [*common-lookup-variables, *ssl-variables, *process-variables]
       VIRTUAL_HOST : 'freq.malcolm.local'
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
@@ -864,8 +811,7 @@ services:
     networks:
       - default
     environment:
-      << : *process-variables
-      << : *ssl-variables
+      <<: [*ssl-variables, *process-variables]
       VIRTUAL_HOST : 'name-map-ui.malcolm.local'
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
@@ -886,9 +832,7 @@ services:
       - default
     env_file: ./netbox/env/netbox.env
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *netbox-variables
+      <<: [*netbox-variables, *ssl-variables, *process-variables]
       VIRTUAL_HOST : 'netbox.malcolm.local'
     depends_on:
       - netbox-postgres
@@ -917,9 +861,7 @@ services:
       - default
     env_file: ./netbox/env/postgres.env
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *netbox-variables
+      <<: [*netbox-variables, *ssl-variables, *process-variables]
       VIRTUAL_HOST : 'netbox-postgres.malcolm.local'
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
@@ -940,9 +882,7 @@ services:
       - default
     env_file: ./netbox/env/redis.env
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *netbox-variables
+      <<: [*netbox-variables, *ssl-variables, *process-variables]
       VIRTUAL_HOST : 'netbox-redis.malcolm.local'
     command:
       - sh
@@ -967,9 +907,7 @@ services:
       - default
     env_file: ./netbox/env/redis-cache.env
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *netbox-variables
+      <<: [*netbox-variables, *ssl-variables, *process-variables]
       VIRTUAL_HOST : 'netbox-redis-cache.malcolm.local'
     command:
       - sh
@@ -993,9 +931,7 @@ services:
     networks:
       - default
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *opensearch-variables
+      <<: [*opensearch-variables, *ssl-variables, *process-variables]
       VIRTUAL_HOST : 'api.malcolm.local'
     volumes:
       - ./nginx/ca-trust:/var/local/ca-trust:ro
@@ -1015,10 +951,7 @@ services:
     networks:
       - default
     environment:
-      << : *process-variables
-      << : *ssl-variables
-      << : *auth-variables
-      << : *nginx-variables
+      <<: [*nginx-variables, *auth-variables, *ssl-variables, *process-variables]
     depends_on:
       - api
       - arkime
