work in progress for idaholab/Malcolm#168

--- a/config/zeek.env.example
+++ b/config/zeek.env.example
@@ -9,6 +9,10 @@ ZEEK_INTEL_FEED_SINCE=
 ZEEK_INTEL_REFRESH_CRON_EXPRESSION=
 # Determines the file extraction behavior for file transfers detected by Zeek
 ZEEK_EXTRACTOR_MODE=none
+# Whether or not to use polling vs. native inotify API to watch for files
+EXTRACTED_FILE_WATCHER_POLLING=false
+# When polling, seconds of inactivity to assume a file is closed and ready for processing
+EXTRACTED_FILE_WATCHER_POLLING_ASSUME_CLOSED_SEC=10
 # Whether or not files extant in ./zeek-logs/extract_files/ will be ignored on startup
 EXTRACTED_FILE_IGNORE_EXISTING=false
 # Determines the behavior for preservation of Zeek-extracted files
