--- a/file-monitor/supervisord.conf
+++ b/file-monitor/supervisord.conf
@@ -22,6 +22,8 @@ command=/usr/local/bin/zeek_carve_watcher.py
   --extra-verbose %(ENV_EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA)s
   --start-sleep %(ENV_EXTRACTED_FILE_WATCHER_START_SLEEP)s
   --ignore-existing %(ENV_EXTRACTED_FILE_IGNORE_EXISTING)s
+  --polling "%(ENV_EXTRACTED_FILE_WATCHER_POLLING)s"
+  --closed-sec %(ENV_EXTRACTED_FILE_WATCHER_POLLING_ASSUME_CLOSED_SEC)s
   --min-bytes %(ENV_EXTRACTED_FILE_MIN_BYTES)s
   --max-bytes %(ENV_EXTRACTED_FILE_MAX_BYTES)s
   --directory "%(ENV_ZEEK_EXTRACTOR_PATH)s"
