don't rebuild nginx-proxy docs on download.md change

--- a/.github/workflows/nginx-build-and-push-ghcr.yml
+++ b/.github/workflows/nginx-build-and-push-ghcr.yml
@@ -17,6 +17,7 @@ on:
       - '_includes/**'
       - '_layouts/**'
       - 'docs/**'
+      - '!docs/download.md'
       - 'Gemfile'
       - 'README.md'
   workflow_dispatch:
