work in progress for idaholab/Malcolm#168

--- a/config/filebeat.env.example
+++ b/config/filebeat.env.example
@@ -9,6 +9,10 @@ FILEBEAT_CLOSE_RENAMED=true
 FILEBEAT_CLOSE_REMOVED=true
 FILEBEAT_CLOSE_EOF=true
 FILEBEAT_CLEAN_REMOVED=true
+# Whether or not to use polling vs. native inotify API to watch for files
+FILEBEAT_WATCHER_POLLING=false
+# When polling, seconds of inactivity to assume a file is closed and ready for processing
+FILEBEAT_WATCHER_POLLING_ASSUME_CLOSED_SEC=10
 # Whether or not to expose a filebeat TCP input listener (see
 #    https://www.elastic.co/guide/en/beats/filebeat/current/filebeat-input-tcp.html)
 FILEBEAT_TCP_LISTEN=false
