Remove extra open port

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -80,34 +80,39 @@ http {
     }
   }
 
-  # htadmin (htpasswd/user management)
-  server {
-    listen 488;
-    include /etc/nginx/nginx_ssl_config.conf;
+  # # htadmin (htpasswd/user management)
+  # server {
+  #   listen 488;
+  #   include /etc/nginx/nginx_ssl_config.conf;
 
-    location / {
-      proxy_pass http://htadmin;
-      proxy_redirect off;
-      proxy_set_header Host htadmin.malcolm.local;
-    }
-  }
+  #   location / {
+  #     proxy_pass http://htadmin;
+  #     proxy_redirect off;
+  #     proxy_set_header Host htadmin.malcolm.local;
+  #   }
+  # }
 
   # Main web interface
   server {
     listen 443;
     include /etc/nginx/nginx_ssl_config.conf;
 
-    # use either auth_basic or auth_ldap
-    include /etc/nginx/nginx_auth_rt.conf;
-
     # Malcolm readme
     location /readme {
+      include /etc/nginx/nginx_auth_rt.conf;
       root /usr/share/nginx/html;
       try_files $uri $uri/index.html;
     }
 
+    location /htadmin(.*)$ {
+      proxy_pass http://htadmin($1);
+      proxy_redirect off;
+      proxy_set_header Host htadmin.malcolm.local;
+    }
+
     # Malcolm file upload
     location /upload {
+      include /etc/nginx/nginx_auth_rt.conf;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
       rewrite ^/upload(.*)/?$ /$1 break;
@@ -119,6 +124,7 @@ http {
       client_max_body_size 50G;
     }
     location /server/php {
+      include /etc/nginx/nginx_auth_rt.conf;
       proxy_http_version 1.1;
       proxy_set_header Connection "";
       proxy_pass http://upload/server/php;
@@ -131,14 +137,17 @@ http {
 
     # Logstash statistics
     location ~* ^/logstash\b(.*) {
+      include /etc/nginx/nginx_auth_rt.conf;
       proxy_pass http://logstash-stats/_node/stats$1;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
     }
 
+    
+
     # Arkime -> Dashboards shortcut
     location ~* ^/idark2dash(.*) {
-
+      include /etc/nginx/nginx_auth_rt.conf;
       set $filter_start_time now-1d;
       if ($arg_start != '') {
         set $filter_start_time \'$arg_start\';
@@ -186,6 +195,7 @@ http {
 
     # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards's YML config file
     location /dashboards {
+      include /etc/nginx/nginx_auth_rt.conf;
       proxy_pass http://dashboards;
       proxy_redirect off;
       proxy_set_header Host dashboards.malcolm.local;
@@ -193,12 +203,14 @@ http {
 
     # offline region maps for dashboards
     location /world.geojson {
+      include /etc/nginx/nginx_auth_rt.conf;
       proxy_pass http://dashboards-maps;
       proxy_redirect off;
       proxy_set_header Host dashboards-helper.malcolm.local;
     }
 
     location ~* ^/extracted-files\b(.*) {
+      include /etc/nginx/nginx_auth_rt.conf;
       proxy_pass http://extracted-file-http-server$1;
       proxy_redirect off;
       proxy_set_header Host file-monitor.malcolm.local;
@@ -206,6 +218,7 @@ http {
 
     # netbox
     location /netbox {
+      include /etc/nginx/nginx_auth_rt.conf;
       proxy_pass http://netbox;
       proxy_redirect off;
       proxy_set_header Host netbox.malcolm.local;
@@ -221,6 +234,7 @@ http {
     # Fix cyberchef JS module(s)
     # https://localhost/arkime/session/190924-KgO9H30qhdREw7ltsDXn1Rgp/modules/Regex.js
     location ~* ^/arkime/session/.*/(modules/.*\.js) {
+      include /etc/nginx/nginx_auth_rt.conf;
       proxy_hide_header Content-Type;
       proxy_set_header Content-Type "application/javascript";
       add_header Content-Type "application/javascript";
@@ -236,6 +250,7 @@ http {
 
     # Malcolm API
     location /mapi {
+      include /etc/nginx/nginx_auth_rt.conf;
       proxy_pass http://api;
       proxy_redirect off;
       proxy_set_header Host api.malcolm.local;
@@ -243,58 +258,13 @@ http {
 
     # Arkime
     location / {
+      include /etc/nginx/nginx_auth_rt.conf;
       proxy_pass https://arkime;
       proxy_ssl_verify off;
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
       proxy_set_header http_auth_http_user $authenticated_user;
       proxy_set_header Authorization "";
-    }
-  }
-
-  # OpenSearch dashboards interface
-  server {
-    listen 5601;
-    include /etc/nginx/nginx_ssl_config.conf;
-
-    # use either auth_basic or auth_ldap
-    include /etc/nginx/nginx_auth_rt.conf;
-
-    # favicon, logos, banners, etc.
-    include /etc/nginx/nginx_image_aliases.conf;
-
-    # Dashboards -> Arkime shortcut
-    location ~* /iddash2ark/(.*) {
-      rewrite ^.*/iddash2ark/(.*) /sessions?expression=($1) redirect;
-      proxy_pass https://arkime;
-      proxy_ssl_verify off;
-      proxy_redirect off;
-      proxy_set_header Host arkime.malcolm.local;
-      proxy_set_header http_auth_http_user $authenticated_user;
-      proxy_set_header Authorization "";
-    }
-
-    # Dashboards -> extracted file download
-    location ~* /dl-extracted-files/(.*) {
-      rewrite ^.*/dl-extracted-files/(.*) /extracted-files/$1 redirect;
-      proxy_pass http://extracted-file-http-server;
-      proxy_redirect off;
-      proxy_set_header Host file-monitor.malcolm.local;
-    }
-
-    # already prepended /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
-    location /dashboards {
-      proxy_pass http://dashboards;
-      proxy_redirect off;
-      proxy_set_header Host dashboards.malcolm.local;
-    }
-
-    # otherwise prepend /dashboards to match the server.basePath in OpenSearch Dashboards' YML config file
-    location / {
-      rewrite ^/(.*) /dashboards/$1;
-      proxy_pass http://dashboards;
-      proxy_redirect off;
-      proxy_set_header Host dashboards.malcolm.local;
     }
   }
 
