Additional edits for htadmin idaholab/Malcolm#169

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -104,8 +104,8 @@ http {
       try_files $uri $uri/index.html;
     }
 
-    location /htadmin(.*)$ {
-      proxy_pass http://htadmin($1);
+    location /htadmin {
+      proxy_pass http://htadmin;
       proxy_redirect off;
       proxy_set_header Host htadmin.malcolm.local;
     }
