work in progress for moving inotify to watchdog, see idaholab/Malcolm#168

--- a/filebeat/supervisord.conf
+++ b/filebeat/supervisord.conf
@@ -69,7 +69,7 @@ command=python3 /usr/local/bin/filebeat-watch-zeeklogs-uploads-folder.py
   --start-sleep 30
   --polling "%(ENV_FILEBEAT_WATCHER_POLLING)s"
   --closed-sec %(ENV_FILEBEAT_WATCHER_POLLING_ASSUME_CLOSED_SEC)s
-  --in "%(ENV_FILEBEAT_ZEEK_DIR)s"/upload
+  --in "%(ENV_FILEBEAT_ZEEK_DIR)s"upload
   --out "%(ENV_FILEBEAT_ZEEK_DIR)s"
   --uid %(ENV_PUID)s
   --gid %(ENV_PGID)s
