work in progress for moving inotify to watchdog, see idaholab/Malcolm#168

--- a/pcap-monitor/supervisord.conf
+++ b/pcap-monitor/supervisord.conf
@@ -18,7 +18,15 @@ supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock
 
 [program:watch-upload]
-command=/bin/bash -c "sleep 30 && /usr/local/bin/watch-pcap-uploads-folder.sh"
+command=python3 /usr/local/bin/watch-pcap-uploads-folder.py
+  --start-sleep 30
+  --polling "%(ENV_PCAP_PIPELINE_POLLING)s"
+  --closed-sec %(ENV_PCAP_PIPELINE_POLLING_ASSUME_CLOSED_SEC)s
+  --in "%(ENV_PCAP_PATH)s"/upload
+  --out "%(ENV_PCAP_PATH)s"/processed
+  --zeek "%(ENV_ZEEK_PATH)s"/upload
+  --uid %(ENV_PUID)s
+  --gid %(ENV_PGID)s
 startsecs=35
 startretries=1
 stopasgroup=true
