Nginx conf adjustments

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -105,6 +105,7 @@ http {
     }
 
     location /htadmin {
+      rewrite ^/htadmin(.*)/?$ /$1 break;
       proxy_pass http://htadmin;
       proxy_redirect off;
       proxy_set_header Host htadmin.malcolm.local;
