work in progress on a little bit more of the python refactoring with the inotify stuff, might be slightly broken :P

--- a/config/upload-common.env.example
+++ b/config/upload-common.env.example
@@ -4,10 +4,8 @@ AUTO_TAG=true
 # The node name (e.g., the hostname of this machine running Malcolm) to associate with
 #   network traffic metadata
 PCAP_NODE_NAME=malcolm
-# Whether or not to enable debug output for processing uploaded/captured PCAP files
-PCAP_PIPELINE_DEBUG=false
-# Whether or not to enable very verbose debug output for processing uploaded/captured PCAP files
-PCAP_PIPELINE_DEBUG_EXTRA=false
+# Verbosity flag for pcap pipeline debugging (e.g., -v, -vv, -vvv, etc.)
+PCAP_PIPELINE_VERBOSITY=
 # Whether or not PCAP files extant in ./pcap/ will be ignored on startup
 PCAP_PIPELINE_IGNORE_PREEXISTING=false
 # Whether or not to use polling vs. native inotify API to watch for files
