--- a/config/zeek.env.example
+++ b/config/zeek.env.example
@@ -40,10 +40,8 @@ EXTRACTED_FILE_CAPA_VERBOSE=false
 EXTRACTED_FILE_ENABLE_CLAMAV=false
 # Whether or not to regularly update rule definitions for file scanning engines
 EXTRACTED_FILE_UPDATE_RULES=false
-# Whether or not to enable debug output for Zeek-extracted file scanning
-EXTRACTED_FILE_PIPELINE_DEBUG=false
-# Whether or not to enable very verbose debug output for Zeek-extracted file scanning
-EXTRACTED_FILE_PIPELINE_DEBUG_EXTRA=false
+# Verbosity flag for extracted file pipeline debugging (e.g., -v, -vv, -vvv, etc.)
+EXTRACTED_FILE_PIPELINE_VERBOSITY=
 # Whether or not to serve the directory containing Zeek-extracted over HTTP at ./extracted-files/
 EXTRACTED_FILE_HTTP_SERVER_ENABLE=false
 # Whether or not Zeek-extracted files served over HTTP will be AES-256-CBC-encrypted
