--- a/filebeat/supervisord.conf
+++ b/filebeat/supervisord.conf
@@ -65,7 +65,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:watch-upload]
-command=python3 /usr/local/bin/filebeat-watch-zeeklogs-uploads-folder.py
+command=python3 /usr/local/bin/filebeat-watch-zeeklogs-uploads-folder.py %(ENV_PCAP_PIPELINE_VERBOSITY)s
   --start-sleep 30
   --polling "%(ENV_FILEBEAT_WATCHER_POLLING)s"
   --closed-sec %(ENV_FILEBEAT_WATCHER_POLLING_ASSUME_CLOSED_SEC)s
