--- a/pcap-monitor/supervisord.conf
+++ b/pcap-monitor/supervisord.conf
@@ -18,7 +18,7 @@ supervisor.rpcinterface_factory=supervisor.rpcinterface:make_main_rpcinterface
 serverurl=unix:///tmp/supervisor.sock
 
 [program:watch-upload]
-command=python3 /usr/local/bin/watch-pcap-uploads-folder.py
+command=python3 /usr/local/bin/watch-pcap-uploads-folder.py %(ENV_PCAP_PIPELINE_VERBOSITY)s
   --start-sleep 30
   --polling "%(ENV_PCAP_PIPELINE_POLLING)s"
   --closed-sec %(ENV_PCAP_PIPELINE_POLLING_ASSUME_CLOSED_SEC)s
@@ -36,9 +36,7 @@ stdout_logfile_maxbytes=0
 redirect_stderr=true
 
 [program:pcap-publisher]
-command=python3 /usr/local/bin/pcap_watcher.py
-  --verbose "%(ENV_PCAP_PIPELINE_DEBUG)s"
-  --extra-verbose "%(ENV_PCAP_PIPELINE_DEBUG_EXTRA)s"
+command=python3 /usr/local/bin/pcap_watcher.py %(ENV_PCAP_PIPELINE_VERBOSITY)s
   --opensearch "%(ENV_OPENSEARCH_URL)s"
   --opensearch-curlrc "%(ENV_OPENSEARCH_CREDS_CONFIG_FILE)s"
   --opensearch-ssl-verify %(ENV_OPENSEARCH_SSL_CERTIFICATE_VERIFICATION)s
