--- a/kubernetes/99-nginx-proxy.yml
+++ b/kubernetes/99-nginx-proxy.yml
@@ -12,6 +12,20 @@ spec:
     name: nginx-proxy-deployment
 
 ---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-htadmin-proxy
+  namespace: malcolm
+spec:
+  ports:
+    - port: 488
+      protocol: TCP
+  selector:
+    name: nginx-proxy-deployment
+
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -36,6 +50,7 @@ spec:
         ports:
           - containerPort: 443
           - containerPort: 8443
+          - containerPort: 488
         envFrom:
           - configMapRef:
               name: process-env
@@ -66,6 +81,11 @@ spec:
           mountPath: /etc/nginx/dhparam/configmap
         - name: nginx-opensearch-curlrc-volume
           mountPath: /var/local/curlrc/configmap
+        - name: nginx-etc-auth-volume
+          mountPath: /etc/nginx/auth
+          subPath: "auth"
+        - name: nginx-etc-auth-default-volume
+          mountPath: /tmp/auth/default/configmap
       volumes:
       - name: nginx-etc-nginx-volume
         configMap:
@@ -82,3 +102,9 @@ spec:
       - name: nginx-opensearch-curlrc-volume
         configMap:
           name: opensearch-curlrc
+      - name: nginx-etc-auth-volume
+        persistentVolumeClaim:
+          claimName: config-claim
+      - name: nginx-etc-auth-default-volume
+        configMap:
+          name: etc-nginx-auth
