idaholab/malcolm#169, make htadmin work with an /auth URI instead of a separate :488 port

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -80,35 +80,44 @@ http {
     }
   }
 
-  # # htadmin (htpasswd/user management)
-  # server {
-  #   listen 488;
-  #   include /etc/nginx/nginx_ssl_config.conf;
-
-  #   location / {
-  #     proxy_pass http://htadmin;
-  #     proxy_redirect off;
-  #     proxy_set_header Host htadmin.malcolm.local;
-  #   }
-  # }
-
   # Main web interface
   server {
     listen 443;
     include /etc/nginx/nginx_ssl_config.conf;
+
+    # favicon, logos, banners, etc.
+    include /etc/nginx/nginx_image_aliases.conf;
+
+    # HTTP basic user management (doesn't use nginx_auth_rt as it does its own auth directly)
+    location /auth {
+      proxy_pass http://htadmin;
+      proxy_redirect off;
+      proxy_set_header Accept-Encoding "";
+      proxy_set_header Host htadmin.malcolm.local;
+      rewrite ^/auth/?(.*) /$1 break;
+      subs_filter_types '*';
+      subs_filter '(src|action|href)="([\w\.-]+\.(php|css|js))' '$1="/auth/$2' gir;
+      subs_filter 'href="styles/' 'href="/auth/styles/' gi;
+      subs_filter 'src="script/' 'src="/auth/script/' gi;
+      subs_filter '/fonts/glyphicons' '/auth/fonts/glyphicons' gi;
+    }
+    location ~* ^/(htadmin|admin_login)(\.php)\b(.*) {
+      proxy_pass http://htadmin/$1$2$3;
+      proxy_redirect off;
+      proxy_set_header Accept-Encoding "";
+      proxy_set_header Host htadmin.malcolm.local;
+      subs_filter_types '*';
+      subs_filter '(src|action|href)="([\w\.-]+\.(php|css|js))' '$1="/auth/$2' gir;
+      subs_filter 'href="styles/' 'href="/auth/styles/' gi;
+      subs_filter 'src="script/' 'src="/auth/script/' gi;
+      subs_filter '/fonts/glyphicons' '/auth/fonts/glyphicons' gi;
+    }
 
     # Malcolm readme
     location /readme {
       include /etc/nginx/nginx_auth_rt.conf;
       root /usr/share/nginx/html;
       try_files $uri $uri/index.html;
-    }
-
-    location /htadmin {
-      rewrite ^/htadmin(.*)/?$ /$1 break;
-      proxy_pass http://htadmin;
-      proxy_redirect off;
-      proxy_set_header Host htadmin.malcolm.local;
     }
 
     # Malcolm file upload
@@ -143,8 +152,6 @@ http {
       proxy_redirect off;
       proxy_set_header Host arkime.malcolm.local;
     }
-
-    
 
     # Arkime -> Dashboards shortcut
     location ~* ^/idark2dash(.*) {
@@ -228,9 +235,6 @@ http {
       proxy_set_header X-Forwarded-Proto $scheme;
       proxy_set_header X-Remote-Auth $authenticated_user;
     }
-
-    # favicon, logos, banners, etc.
-    include /etc/nginx/nginx_image_aliases.conf;
 
     # Fix cyberchef JS module(s)
     # https://localhost/arkime/session/190924-KgO9H30qhdREw7ltsDXn1Rgp/modules/Regex.js
