--- a/kubernetes/02-opensearch.yml
+++ b/kubernetes/02-opensearch.yml
@@ -36,7 +36,8 @@ spec:
         securityContext:
           capabilities:
             add:
-            - IPC_LOCK
+              - IPC_LOCK
+              - SYS_RESOURCE
         ports:
           - containerPort: 9200
         envFrom:
