--- a/kubernetes/06-arkime.yml
+++ b/kubernetes/06-arkime.yml
@@ -33,6 +33,11 @@ spec:
         imagePullPolicy: Always
         stdin: false
         tty: true
+        securityContext:
+          capabilities:
+            add:
+              - IPC_LOCK
+              - SYS_RESOURCE
         ports:
           - containerPort: 8005
         envFrom:
