--- a/kubernetes/20-pcap-capture.yml
+++ b/kubernetes/20-pcap-capture.yml
@@ -23,10 +23,11 @@ spec:
         securityContext:
           capabilities:
             add:
-            - IPC_LOCK
-            - NET_ADMIN
-            - NET_RAW
-            - SYS_ADMIN
+              - IPC_LOCK
+              - NET_ADMIN
+              - NET_RAW
+              - SYS_ADMIN
+              - SYS_RESOURCE
         envFrom:
           - configMapRef:
               name: process-env
